tools/kql-validator/tests/bad/unclosed_paren.kql
// TRR0099.WIN.A -- Bad: Unclosed parenthesis
// DDM Operation: n2 "Test"

DeviceProcessEvents
| where (FileName == "cmd.exe" and InitiatingProcessFileName == "w3wp.exe"
| project TimeGenerated
;
